unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/breadwinner_ns__BW_Billing_Account__c.object-meta.xml
<CustomObject>
    <label>NetSuite Billing Account</label>
    <nameField>
        <label>Billing Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Billing Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>