unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/fields/breadwinner_ns__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ExternalId__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>