unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/fields/breadwinner_ns__IdNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IdNumber__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>