unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/fields/breadwinner_ns__Inactive__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>