unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/fields/breadwinner_ns__LastModifiedDateOnly__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__LastModifiedDateOnly__c</fullName>
    <label>LastModified Date in NetSuite</label>
    <type>Date</type>
</CustomField>