unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/fields/breadwinner_ns__RequestOffCycleInvoice__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RequestOffCycleInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Off-Cycle Invoice for Advance Charges</description>
    <label>Request Off Cycle Invoice</label>
    <type>Checkbox</type>
</CustomField>