unpackaged/main/default/objects/breadwinner_ns__BW_Billing_Account__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IdNumber__c</columns>
    <columns>breadwinner_ns__Frequency__c</columns>
    <columns>breadwinner_ns__BillingScheduleName__c</columns>
    <columns>breadwinner_ns__Customer__c</columns>
    <columns>breadwinner_ns__CustomerDefault__c</columns>
    <columns>breadwinner_ns__StartDate__c</columns>
    <columns>breadwinner_ns__NextBillCycleDate__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>